# sa-carbon

./: .gitignore  Cargo.toml  README.md
decoders/sage-decoder/: Cargo.toml
decoders/sage-decoder/src/: lib.rs
decoders/sage-decoder/src/accounts/: combat_config.rs  crafting_instance.rs  disbanded_fleet.rs  fleet.rs  fleet_ships.rs  game.rs  game_state.rs  loot.rs  mine_item.rs  mod.rs  planet.rs  player_crew_record.rs  progression_config.rs  resource.rs  sage_crew_config.rs  sage_player_profile.rs  sector.rs  ship.rs  star.rs  starbase.rs  starbase_player.rs  survey_data_unit_tracker.rs
decoders/sage-decoder/src/instructions/: activate_game_state.rs  add_connection.rs  add_crew_to_game.rs  add_rental.rs  add_ship_escrow.rs  add_ship_to_fleet.rs  attack_fleet.rs  burn_crafting_consumables.rs  cancel_crafting_process.rs  change_rental.rs  claim_crafting_non_consumables.rs  claim_crafting_outputs.rs  close_crafting_process.rs  close_disbanded_fleet.rs  close_fleet_cargo_pod_token_account.rs  close_player_crew_record.rs  close_starbase_cargo_token_account.rs  close_upgrade_process.rs  complete_starbase_upgrade.rs  copy_game_state.rs  create_cargo_pod.rs  create_certificate_mint.rs  create_crafting_process.rs  create_fleet.rs  create_starbase_upgrade_resource_process.rs  deposit_cargo_to_fleet.rs  deposit_cargo_to_game.rs  deposit_crafting_ingredient.rs  deposit_starbase_upkeep_resource.rs  deregister_combat_config.rs  deregister_mine_item.rs  deregister_progression_config.rs  deregister_resource.rs  deregister_starbase.rs  deregister_survey_data_unit_tracker.rs  dev_add_crew_to_game.rs  dev_deposit_cargo_to_game.rs  disband_fleet.rs  disbanded_fleet_to_escrow.rs  discover_sector.rs  (+75 more)
decoders/sage-decoder/src/types/: mod.rs  register_mine_item_input.rs  register_planet_input.rs  register_ship_input.rs  register_star_input.rs  register_starbase_input.rs  register_starbase_input_unpacked.rs  update_ship_input.rs
demo/: Cargo.toml
demo/src/: main.rs
src/: main.rs
src/sage_decoder/accounts/: combat_config.rs  crafting_instance.rs  disbanded_fleet.rs  fleet.rs  fleet_ships.rs  game.rs  game_state.rs  loot.rs  mine_item.rs  mod.rs  planet.rs  player_crew_record.rs  (+9 more)
(+246 files in other folders)
